--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.29",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/supabase-js": "^2.58.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.562.0",
-    "next": "15.5.9",
+    "next": "^16.1.2",
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
